Bug 164718 - Field content disappears on file opening if it's inserted into a section close to page border
Summary: Field content disappears on file opening if it's inserted into a section clos...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Fields
  Show dependency treegraph
 
Reported: 2025-01-15 13:25 UTC by Gabor Kelemen (Collabora)
Modified: 2025-10-27 09:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer with field in section (55.58 KB, application/vnd.oasis.opendocument.text)
2025-01-15 13:25 UTC, Gabor Kelemen (Collabora)
Details
The document upon opening (198.96 KB, image/png)
2025-01-15 13:26 UTC, Gabor Kelemen (Collabora)
Details
The file after pressing F9 - field becomes visible (248.53 KB, image/png)
2025-01-15 13:30 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-01-15 13:25:50 UTC
Created attachment 198549 [details]
Example file from Writer with field in section

Attached file contains a cross reference field and a secrtion containing the field.
When opened, the bottom field is not visible until F9 is pressed.

1. Open attached file
-> Only one grey background field is visible
2. Press F9
-> The bottom grey background field becomes visible in the two column section

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: db6a6efdc49df054826e9019ebe955282de929a7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started in 24.2 with:

https://git.libreoffice.org/core/+/167be9363ea505b334aa595b273707d7d9217863%5E%21

commit 167be9363ea505b334aa595b273707d7d9217863	[log]
author	Mike Kaganski <mike.kaganski@collabora.com>	Sun Apr 07 18:23:52 2024 +0500
committer	Xisco Fauli <xiscofauli@libreoffice.org>	Thu Apr 11 11:40:45 2024 +0200

tdf#160526, tdf#160549: fix split conditions at page start
Comment 1 Gabor Kelemen (Collabora) 2025-01-15 13:26:12 UTC
Created attachment 198550 [details]
The document upon opening
Comment 2 Gabor Kelemen (Collabora) 2025-01-15 13:30:36 UTC
Created attachment 198551 [details]
The file after pressing F9 - field becomes visible
Comment 3 mikhail.machine 2025-02-02 05:51:35 UTC
Hello allotropia,

Thank you for reporting the bug. Opened attached file does not produce grey background. Pressing F9 does not make visible another text with grey area.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a8ec21adf255b70bb6eeb0a1717190df303d8b26
CPU threads: 12; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_FI); UI: en-US
Writer: threaded
Comment 4 Buovjaga 2025-10-24 16:57:22 UTC
Repro

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4ee667ebd3780bf646f11f8f1b78d4ed2c132432
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 24 October 2025
Comment 5 Mike Kaganski 2025-10-25 17:03:04 UTC
https://gerrit.libreoffice.org/c/core/+/192978
Comment 6 Commit Notification 2025-10-26 05:33:54 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5533565c5c7250f1940ba80e03297fdbf78b435

tdf#164718: allow splitting multiline fields in SwTextFrame::FormatAdjust

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-10-27 09:52:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/670c5cee9d08c4ac4696e65ab550b97f8d590e29

tdf#164718: allow splitting multiline fields in SwTextFrame::FormatAdjust

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.